--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ understands <code>.groc.json</code>) and have the following changes:</p>
 syntax highlighter</li>
 <li>default style is changed to look more like <a href="https://github.com/apres/lit.js">lit</a></li>
 <li>table of contents includes all the files with all the titles from project</li>
-<li>you can use <code>{ { TOC } }</code> tag to insert auto generated table of contents in your markdown</li>
-<li>you can use <code><span class="autolink">[Any Title]</span></code> syntax for auto linking to any title in the project (for now citare does
+<li><code>{ { TOC } }</code> tag to insert auto generated table of contents in your markdown</li>
+<li><code><span class="autolink">[Any Title]</span></code> syntax for auto linking to any title in the project (for now citare does
 not resolve duplicate titles so link will point to the first found duplicate title)</li>
 </ul>
 <h2 id="literate-programming">Literate programming?</h2>
